--- a/PlayerConceptDesign/PlayerConceptDesign.csproj
+++ b/PlayerConceptDesign/PlayerConceptDesign.csproj
@@ -22,9 +22,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
     <PackageReference Include="NAudio" Version="2.0.1" />
-    <PackageReference Include="RIS" Version="3.14.0" />
-    <PackageReference Include="RIS.Logging" Version="3.0.1" />
-    <PackageReference Include="RIS.Settings" Version="1.3.3" />
+    <PackageReference Include="RIS" Version="3.14.1" />
+    <PackageReference Include="RIS.Collections" Version="4.8.2" />
+    <PackageReference Include="RIS.Logging" Version="3.1.0" />
+    <PackageReference Include="RIS.Settings" Version="1.4.0" />
     <PackageReference Include="Syncfusion.Tools.WPF" Version="19.1.0.69" />
     <PackageReference Include="TagLibSharp" Version="2.2.0" />
   </ItemGroup>
